--- a/PAGGINA.css
+++ b/PAGGINA.css
@@ -14,6 +14,42 @@ body, div, ul, nav, header, footer, a, li, label {
     padding: 0;       
 }
 
+dialog{
+    background-color: #0009;
+    height: 100vh;
+    box-sizing: border-box;
+    z-index: 1000;
+    width: 100vw;
+}
+
+.modal__content{
+    background-color: #fff;
+    padding: 10px 20px;
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+    position: relative;
+}
+
+/* ---------INICIO DE VENTANA MODAL--------  */
+
+.modal__title{
+    margin-top: 10px;
+}
+
+.modal__clos-buttom{
+    background-color: #000;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 20px;
+    padding: 4px 12px;
+}
+
+/* ---------- FIN DE VENTANA MODAL---------- */
+
+
+
 /* -----------HEADER SECTION O SECION  DEL HEADER */
 
 .header{  
